tests/transpiler/x/java/append_builtin.error
exit status 1
Main.java:5: error: cannot find symbol
        System.out.println(append(a, 3));
                           ^
  symbol:   method append(int[],int)
  location: class Main
1 error
