tests/transpiler/x/java/append_builtin.java
public class Main {
    static int[] a = new int[]{1, 2};
    public static void main(String[] args) {
        System.out.println(append(a, 3));
    }
}
